force-app/main/default/objects/ampi__Project_Thematic_Area__c/ampi__Project_Thematic_Area__c.object-meta.xml
<CustomObject>
    <description>Junction linking a project to a thematic area</description>
    <label>Project Thematic Area</label>
    <nameField>
        <displayFormat>PTA-{0000}</displayFormat>
        <label>Project Thematic Area ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Thematic Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>