force-app/main/default/objects/ampi__Project_Thematic_Area__c/fields/ampi__Icon__c.field-meta.xml
<CustomField>
    <fullName>ampi__Icon__c</fullName>
    <description>This formula field copies the ID (icons catalog) of thematic area icon from parent thematic area</description>
    <formula>ampi__Thematic_Area__r.ampi__Icon__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon</label>
    <type>Text</type>
</CustomField>