force-app/main/default/objects/ampi__Project_Thematic_Area__c/fields/ampi__Project__c.field-meta.xml
<CustomField>
    <fullName>ampi__Project__c</fullName>
    <description>This master-detail field refers to the parent project</description>
    <label>Project</label>
    <referenceTo>ampi__Project__c</referenceTo>
    <relationshipLabel>Thematic Areas</relationshipLabel>
    <relationshipName>Project_Thematic_Areas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>