force-app/main/default/objects/ampi__Project_Thematic_Area__c/fields/ampi__Thematic_Area__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area__c</fullName>
    <description>This master-detail field refers to the parent thematic area</description>
    <label>Thematic Area</label>
    <referenceTo>ampi__Thematic_Area__c</referenceTo>
    <relationshipLabel>Related Projects</relationshipLabel>
    <relationshipName>Project_Thematic_Areas</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>