force-app/main/default/objects/ampi__Project_Thematic_Area__c/fields/ampi__Thematic_Area_Name__c.field-meta.xml
<CustomField>
    <fullName>ampi__Thematic_Area_Name__c</fullName>
    <description>This formula field copies the name of thematic area from parent thematic area</description>
    <formula>ampi__Thematic_Area__r.ampi__Name_Translated__c</formula>
    <label>Thematic Area Name</label>
    <type>Text</type>
</CustomField>