force-app/main/default/objects/ampi__Project_Thematic_Area__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Programme unit code</description>
    <formula>Programme_Unit__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Legacy code of PU</inlineHelpText>
    <label>PU Code</label>
    <type>Text</type>
</CustomField>