force-app/main/default/objects/ampi__Project_Thematic_Area__c/fields/order_project__c.field-meta.xml
<CustomField>
    <fullName>order_project__c</fullName>
    <defaultValue>1</defaultValue>
    <label>order project</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>