force-app/main/default/objects/ampi__Project_Thematic_Area__c/fields/Programme_Unit__c.field-meta.xml
<CustomField>
    <fullName>Programme_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Programme Unit</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>3 AND (1 OR 2)</booleanFilter>
        <filterItems>
            <field>ampi__Geographical_Area__c.ampi__Type__c</field>
            <operation>equals</operation>
            <value>Programme Unit</value>
        </filterItems>
        <filterItems>
            <field>ampi__Geographical_Area__c.ampi__Type__c</field>
            <operation>equals</operation>
            <value>National Management Unit</value>
        </filterItems>
        <filterItems>
            <field>ampi__Geographical_Area__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Organisational Unit</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>ampi__Geographical_Area__c</referenceTo>
    <relationshipLabel>Project Service Types</relationshipLabel>
    <relationshipName>Project_Service_Types</relationshipName>
    <type>Lookup</type>
</CustomField>