force-app/main/default/objects/ampi__Project_Thematic_Area__c/fields/PU_Extent_Information__c.field-meta.xml
<CustomField>
    <fullName>PU_Extent_Information__c</fullName>
    <label>PU Extent Information</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>