force-app/main/default/objects/ampi__Project_Thematic_Area__c/fields/PU_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>PU_Short_Name__c</fullName>
    <formula>Programme_Unit__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PU Short Name</label>
    <type>Text</type>
</CustomField>