force-app/main/default/objects/ampi__Project_Thematic_Area__c/fields/Unique_Name__c.field-meta.xml
<CustomField>
    <fullName>Unique_Name__c</fullName>
    <description>Field is used to differentiate different PTA records for exchange with external systems</description>
    <formula>ampi__Project__r.Project_Number_ID__c + &apos;_&apos; + ampi__Thematic_Area__r.Unique_Name__c + &quot;_&quot; + TEXT(order_project__c)</formula>
    <label>Unique Name</label>
    <type>Text</type>
</CustomField>