force-app/main/default/objects/ampi__Project_Thematic_Area__c/validationRules/ISP_Value_No.validationRule-meta.xml
<ValidationRule>
    <fullName>ISP_Value_No</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(ISP_Available__c) &amp;&amp; TEXT(ampi__Project__r.ISP_Available__c) == &apos;Temporarily closed for international sponsorship&apos; &amp;&amp; (TEXT(ISP_Available__c) == &apos;Yes&apos; || TEXT(ISP_Available__c) == &apos;Only existing&apos;)</errorConditionFormula>
    <errorMessage>ISP Available on any service type of the project cannot be set to “Yes” or “Only existing” when ISP Available on the project is “Temporarily closed for international sponsorship”</errorMessage>
</ValidationRule>