force-app/main/default/objects/ampi__Project_Thematic_Area__c/validationRules/Service_Type_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Type_Active</fullName>
    <active>true</active>
    <description>The Service Type selected have to be Active</description>
    <errorConditionFormula>ampi__Thematic_Area__r.ampi__Active__c = false</errorConditionFormula>
    <errorMessage>The &quot;Service Type&quot; selected have to be Active</errorMessage>
</ValidationRule>