force-app/main/default/objects/ampi__Project_Thematic_Area__c/listViews/ampi__All.listView-meta.xml
<ListView>
    <fullName>ampi__All</fullName>
    <columns>NAME</columns>
    <columns>ampi__Project__c</columns>
    <columns>ampi__Thematic_Area__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Unique_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>